# agile-agent

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
agent-provider/: Cargo.toml
agent-provider/src/: lib.rs  probe.rs
agent-provider/src/launch_config/: context.rs  error.rs  spec.rs  validation.rs
agent-provider/src/providers/: mod.rs
agent/daemon/: Cargo.toml
agent/daemon/benches/: multi_client_latency.rs
agent/daemon/src/: audit.rs  broadcaster.rs  config_file.rs  connection.rs  decision_agent_slot.rs  decision_integration.rs  decision_interpreter.rs  event_log.rs  event_pump.rs  health.rs  lib.rs  lifecycle.rs  main.rs  real_provider.rs  router.rs  server.rs  session_interpreter.rs  session_mgr.rs  workplace.rs
agent/daemon/tests/: daemon_agent_lifecycle.rs  daemon_decision_action_loop.rs  daemon_decision_layer.rs
agent/protocol/: Cargo.toml
agent/protocol/benches/: event_serialize.rs
agent/protocol/src/: config.rs  events.rs  jsonrpc.rs  lib.rs  methods.rs  state.rs
agent/provider/: Cargo.toml
agent/provider/src/: lib.rs  llm_caller.rs  logging.rs  probe.rs  provider.rs  provider_thread.rs
agent/runtime-domain/: Cargo.toml
agent/runtime-domain/src/: lib.rs  runtime_command.rs  transcript_journal.rs  worker.rs  worker_state.rs
agent/storage/: Cargo.toml
agent/storage/src/: data_migration.rs  lib.rs  storage.rs
agent/worktree/: Cargo.toml
agent/worktree/src/: git_flow_config.rs  git_flow_executor.rs  lib.rs  logging.rs  worktree_manager.rs  worktree_state_store.rs
cli/: Cargo.toml
cli/src/: app_runner.rs  lib.rs  main.rs  protocol_client.rs
cli/tests/: coverage_script.rs  logging_cli.rs  multi_agent_integration.rs  runtime_cli.rs  tui_decoupling.rs  worktree_integration.rs
cli/tests/support/: mod.rs
core/: Cargo.toml
core/src/: agent_mail.rs  agent_memory.rs  agent_messages.rs  agent_pool.rs  agent_role.rs  agent_runtime.rs  agent_slot.rs  agent_state.rs  agent_store.rs  agent_transcript.rs  app.rs  autonomy.rs  backlog.rs  backlog_store.rs  blocker_escalation.rs  commands.rs  data_migration.rs  decision_agent_slot.rs  decision_kanban.rs  decision_mail.rs  escalation.rs  event_aggregator.rs  git_flow_config.rs  git_flow_executor.rs  global_config.rs  lib.rs  llm_caller.rs  logging.rs  loop_runner.rs  multi_agent_session.rs  persistence_coordinator.rs  probe.rs  provider.rs  provider_thread.rs  runtime_command.rs  runtime_mode.rs  runtime_session.rs  session_store.rs  shared_state.rs  shutdown_snapshot.rs  (+15 more)
core/src/command_bus/: mod.rs  model.rs  parse.rs  registry.rs
core/src/launch_config/: context.rs  error.rs  mod.rs  parser.rs  persistence.rs  redaction.rs  resolver.rs  restore.rs  spec.rs  validation.rs
core/src/pool/: blocked_handler.rs  decision_coordinator.rs  decision_executor.rs  decision_interpreter.rs  decision_spawner.rs  event_converter.rs  focus_manager.rs  lifecycle.rs  mod.rs  queries.rs  task_assignment.rs  types.rs  worktree_coordinator.rs  worktree_recovery.rs
core/src/provider_profile/: error.rs  interpolate.rs  mod.rs  persistence.rs  profile.rs  resolver.rs  store.rs  types.rs
core/src/providers/: claude.rs  codex.rs
core/src/slot/: mod.rs  state_machine.rs  status.rs  thread_types.rs
core/tests/: logging.rs  multi_agent_event_flow.rs  multi_agent_session_lifecycle.rs  multi_agent_task_assignment.rs  multi_agent_tool_call_flow.rs  single_agent_loop_guardrails.rs  single_agent_loop_simple_task.rs  single_agent_loop_tool_call.rs
core/tests/integration_common/: mod.rs
crates/agile-agent-cli/: Cargo.toml
crates/agile-agent-cli/src/: main.rs
crates/agile-agent-tui/: Cargo.toml
crates/agile-agent-tui/src/: app_loop.rs  input.rs  lib.rs  render.rs  terminal.rs
decision/: Cargo.toml
decision/src/: acp_classifier.rs  action.rs  action_registry.rs  automation.rs  blocking.rs  builtin_actions.rs  builtin_situations.rs  classifier.rs  classifier_registry.rs  claude_classifier.rs  cli_engine.rs  codex_classifier.rs  command.rs  commit_boundary.rs  concurrent.rs  condition.rs  context.rs  engine.rs  error.rs  git_state.rs  initializer.rs  lib.rs  lifecycle.rs  llm_caller.rs  llm_engine.rs  maker.rs  maker_registry.rs  metrics.rs  mock_engine.rs  output.rs  persistence.rs  pipeline.rs  provider_event.rs  provider_kind.rs  recovery.rs  rule_engine.rs  situation.rs  situation_registry.rs  strategy.rs  task.rs  (+9 more)
decision/src/classifier/: acp_classifier.rs  mod.rs  (+4 more)
decision/tests/: integration.rs
kanban/: Cargo.toml
kanban/src/: builtin.rs  decision_kanban.rs  domain.rs  elements.rs  error.rs  events.rs  factory.rs  file_repository.rs  git_ops.rs  lib.rs  registry.rs  repository.rs  serde.rs  service.rs  traits.rs  transition.rs  types.rs
kanban/tests/: builtin.rs  conversion.rs  domain.rs  e2e_accessor.rs  e2e_file_repository.rs  e2e_serialization.rs  e2e_service_events.rs  e2e_update.rs  element.rs  element_no_lock.rs  elements.rs  events.rs  factory.rs  git_ops.rs  integration.rs  integration_full.rs  registry.rs  repository.rs  repository_trait.rs  serde_tests.rs  service.rs  service_registry.rs  test_helpers.rs  trait_accessors.rs  traits.rs  transition.rs  transition_context.rs  types.rs
llm-provider/: Cargo.toml
llm-provider/src/: client.rs  config.rs  error.rs  lib.rs  mock.rs  models.rs  provider.rs  text.rs
llm-provider/tests/: integration_tests.rs
tui/: Cargo.toml
tui/src/: app_loop.rs  command_runtime.rs  confirmation_overlay.rs  diff_render.rs  effect_handler.rs  event_handler.rs  exec_command.rs  exec_semantics.rs  history_cell.rs  human_decision_overlay.rs  input.rs  launch_config_overlay.rs  lib.rs  markdown.rs  markdown_stream.rs  metrics_panel.rs  overview_row.rs  overview_state.rs  profile_selection_overlay.rs  protocol_app_loop.rs  protocol_client.rs  protocol_state.rs  provider_overlay.rs  reconnecting_client.rs  render.rs  resume_overlay.rs  shell_tests.rs  streaming.rs  task_decision_overlay.rs  task_detail_view.rs  task_panel.rs  terminal.rs  test_support.rs  text_formatting.rs  tool_output.rs  tui_snapshot.rs  ui_state.rs  view_mode.rs  websocket_client.rs
(+403 files in other folders)
