[workspace]
members = [
    "crates/agile-agent-cli",
    "crates/agile-agent-core",
    "crates/agile-agent-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["bracketed-paste"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
