[workspace]
members = [
    "cli",
    "core",
    "tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["bracketed-paste"] }
dirs = "6"
pulldown-cmark = "0.12"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
textwrap = "0.16"
unicode-segmentation = "1"
unicode-width = "0.2"
which = "8"
