[workspace]
members = [
    "agent-types",
    "cli",
    "core",
    "decision",
    "kanban",
    "llm-provider",
    "test-support",
    "tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = true, features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["bracketed-paste"] }
dirs = "6"
diffy = "0.4.2"
pathdiff = "0.2"
pulldown-cmark = "0.12"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serial_test = "3"
shlex = "1"
tempfile = "3"
textwrap = "0.16"
thiserror = "2"
unicode-segmentation = "1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
which = "8"
