[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agile-agent"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
agent-tui = { path = "../tui" }
