[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agile-agent"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../core" }
agent-decision = { path = "../decision" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
agent-tui = { path = "../tui" }

[dev-dependencies]
agent-test-support = { path = "../test-support" }
tempfile.workspace = true
