[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
which.workspace = true
agent-kanban = { path = "../kanban" }

[dev-dependencies]
tempfile.workspace = true
