[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tempfile.workspace = true
which.workspace = true
uuid.workspace = true
pathdiff.workspace = true
thiserror.workspace = true
agent-kanban = { path = "../kanban" }
agent-decision = { path = "../decision" }