[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-types = { path = "../agent/types" }
agent-toolkit = { path = "../agent/toolkit" }
agent-events = { path = "../agent/events" }
agent-runtime-domain = { path = "../agent/runtime-domain" }
agent-behavior-infra = { path = "../agent/behavior-infra" }
agent-provider = { path = "../agent/provider" }
agent-worktree = { path = "../agent/worktree" }
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
pathdiff.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which.workspace = true
uuid.workspace = true
agent-kanban = { path = "../kanban" }
agent-decision = { path = "../decision" }
agent-backlog = { path = "../agent/backlog" }
agent-storage = { path = "../agent/storage" }
agent-commands = { path = "../agent/commands" }

[dev-dependencies]
serial_test.workspace = true