[package]
name = "agent-decision"
edition.workspace = true
version.workspace = true

[dependencies]
agent-events = { path = "../agent/events" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }