[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-core = { path = "../core" }
chrono.workspace = true
crossterm.workspace = true
diffy.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
textwrap.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tempfile.workspace = true
