[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-core = { path = "../core", optional = true }
agent-decision = { path = "../decision", optional = true }
agent-kanban = { path = "../kanban", optional = true }
agent-protocol = { path = "../agent/protocol" }
chrono.workspace = true
crossterm.workspace = true
diffy.workspace = true
futures = "0.3"
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
textwrap.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tracing.workspace = true
unicode-segmentation.workspace = true
uuid = { workspace = true }
unicode-width.workspace = true

[features]
default = ["core"]
core = ["dep:agent-core", "dep:agent-decision", "dep:agent-kanban"]

[dev-dependencies]
tempfile.workspace = true
