[package]
name = "agent-daemon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "agent-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { workspace = true }
uuid = { workspace = true }

agent-protocol = { path = "../protocol" }
agent-types = { path = "../types" }

[dev-dependencies]
tokio-test = { workspace = true }
