[package]
name = "agent-daemon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "agent-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["json"] }
toml = "0.8"
crc32fast = "1.3"
sha2 = "0.10"
rand = "0.8"
chrono = { workspace = true }
dirs = { workspace = true }
nix = { version = "0.29", features = ["fs"] }
uuid = { workspace = true }

agent-protocol = { path = "../protocol" }
agent-types = { path = "../types" }
agent-core = { path = "../../core" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "multi_client_latency"
harness = false
