[package]
name = "agent-protocol"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
agent-types = { path = "../types" }
tokio = { workspace = true, features = ["fs", "process", "time", "sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "event_serialize"
harness = false
