[package]
name = "agent-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-types = { path = "../types" }
agent-toolkit = { path = "../toolkit" }
agent-events = { path = "../events" }
agent-decision = { path = "../../decision" }
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true
which.workspace = true
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true