[package]
name = "agent-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-types = { path = "../types" }
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
