[package]
name = "agile-agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agile-agent"
path = "src/main.rs"

[dependencies]
agile-agent-core = { path = "../agile-agent-core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
agile-agent-tui = { path = "../agile-agent-tui" }
