[package]
name = "agile-agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agile-agent-core = { path = "../agile-agent-core" }
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
textwrap.workspace = true
unicode-width.workspace = true
